--- a/YumYumDeliv/yum_deliv/templates/RestAdmin.html
+++ b/YumYumDeliv/yum_deliv/templates/RestAdmin.html
@@ -26,7 +26,7 @@
             </div>
         </nav>
     </header>
-
+<div class="title-panel">Панель администратора ресторана &laquo;{{ rest.0.name }}&raquo;</div>
 <div class="admin-panel">
     <h1 id="menu-link">Блюда ресторана</h1>
     <h1 id="info-link">Информация ресторана</h1>
