--- a/YumYumDeliv/yum_deliv/templates/UserOrders.html
+++ b/YumYumDeliv/yum_deliv/templates/UserOrders.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
 </head>
 <body>
-
+{% block header %}{% include 'Passive_header.html' %}{% endblock %}
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
