--- a/YumYumDeliv/yum_deliv/templates/Resataurant.html
+++ b/YumYumDeliv/yum_deliv/templates/Resataurant.html
@@ -75,13 +75,13 @@
             <h2>Корзина</h2>
             <p style="cursor: pointer;" onclick="clearCart()">Очистить</p>
             <ul id="cart-list-col"></ul>
-            <button id="btn_place" onclick="location.href='/ordered/{{ restaurant.0.url_address }}'">Оформить заказ</button>
+            <button id="btn_place" class="placeOrdBtn" onclick="location.href='/ordered/{{ restaurant.0.url_address }}'">Оформить заказ</button>
         </div>
     </div>
 </div>
 <script>localStorage.setItem('url_rest', JSON.stringify('{{restaurant.0.url_address}}'));</script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
 <script src="{% static 'js/homepage.js' %}"></script>
-<script src="{% static 'js/resataurant.js' %}"></script>
+<script src="{% static 'js/restaurant.js' %}"></script>
 </body>
 </html>
