Fix cart Delete

--- a/YumYumDeliv/yum_deliv/templates/RestAdmin.html
+++ b/YumYumDeliv/yum_deliv/templates/RestAdmin.html
@@ -187,7 +187,7 @@
             <input type="text" class="form-control" id="name_rest" name="name_rest" value="{{ rest.0.name }}" required>
         </div>
         <div class="mb-3">
-            <label for="address_rest" class="form-label">Адресс ресторана:</label>
+            <label for="address_rest" class="form-label">Адрес ресторана:</label>
             <input type="text" class="form-control" id="address_rest" name="address_rest" value="{{ rest.0.adress }}" required>
         </div>
         <label for="type-rest">Тип ресторана:</label>
